Fix spacing for forms

--- a/app/assets/stylesheets/base/_helpers.scss
+++ b/app/assets/stylesheets/base/_helpers.scss
@@ -2,8 +2,8 @@
 
 .wrapper-form {
   width: 100%;
-  padding: 0 20px;
-  margin: 0 auto;
+  padding: 0 var(--wrapper);
+  margin: 48px auto;
 }
 
 .spacer-xs { margin-bottom: 12px; }
